--- a/index.html
+++ b/index.html
@@ -3,25 +3,32 @@
 
 <head>
     <title>Calculadora de hidratacion</title>
+    <link rel="stylesheet" href="./style.css" />
+    <script src="script.js" defer></script>
 </head>
 
 <body>
-    <div>
-        <div>
-            <h1>Calculadora de hidratacion</h1>
-            <input type="number" placeholder="Peso en kg" />
-            <p>* Debe completar todos los datos</p>
-            <button>Calcular</button>
-            <p>71cc/h</p>
-            <p>m+m/2 : 105cc/h</p>
+    <div id="contenedor">
+        <div id="calculadora">
+            <div class="contenido">
+                <h1>Calculadora de hidratacion basal</h1>
+                <p>Completa todos los datos</p>
+                <input class="item" id="peso "type="number" placeholder="Peso en kg" />
+                <p class="item" id="error">* Debe completar todos los datos</p>
+                <button class="item" id="calcular">Calcular</button>
+                <p class="item resultado" id="flu">71cc/h</p>
+                <p class="item resultado" id="man">m+m/2 : 105cc/h</p>
+            </div>
         </div>
-        <div>
-            <h1>Como se calcula?</h1>
-            <ul>
-                <li>De 0kg a 10Kg, se calcula 100cc por cada kilo.</li>
-                <li>Se suman 50cc por cada kilo de peso por encima de 10 kg, hasta 20 kg</li>
-                <li>De 20 kg para arriba, se suman 20cc por cada kilo adicional</li>
-            </ul>
+        <div id="detalle">
+            <div class="calculadora">
+                <h1>Como se calcula?</h1>
+                <ul>
+                    <li>De 0kg a 10Kg, se calcula 100cc por cada kilo.</li>
+                    <li>Se suman 50cc por cada kilo de peso por encima de 10 kg, hasta 20 kg</li>
+                    <li>De 20 kg para arriba, se suman 20cc por cada kilo adicional</li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
