--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="contenido">
                 <h1>Calculadora de hidratacion basal</h1>
                 <p>Completa todos los datos</p>
-                <input class="item" id="peso "type="number" placeholder="Peso en kg" />
+                <input class="item" id="peso" type="number" placeholder="Peso en kg" />
                 <p class="item" id="error">* Debe completar todos los datos</p>
                 <button class="item" id="calcular">Calcular</button>
                 <p class="item resultado" id="flu">71cc/h</p>
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div id="detalle">
-            <div class="calculadora">
+            <div class="contenido">
                 <h1>Como se calcula?</h1>
                 <ul>
                     <li>De 0kg a 10Kg, se calcula 100cc por cada kilo.</li>
